update handlebars with content

--- a/views/partials/nav/nav-block.handlebars
+++ b/views/partials/nav/nav-block.handlebars
@@ -19,7 +19,7 @@
         <a class="nav-link" href="/detail">Create or Edit Character</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/inventory">Inventory Tracker</a>
+        <a class="nav-link" href="/inventory-tracker">Inventory Tracker</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/logout">Logout</a>
