--- a/views/character-list.handlebars
+++ b/views/character-list.handlebars
@@ -1,34 +1,64 @@
 {{> nav/nav-block}}
 
+
 <div id="home">
   <div class="container">
-    <div class="row">
-      <div class="col-8 offset-2">
-        <h2>{{msg}}</h2>
-        <form class="clearfix mb-4" action="POST">
-          <div class="form-group">
-            <label for="example-text">Example Text</label>
-            <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
-          </div>
-          <div class="form-group">
-            <label for="example-description">Example Description</label>
-            <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
-          </div>
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
-        </form>
-        <h4>Examples belong to this user:</h4> 
-        <ul id="example-list" class="list-group">
-          {{#each examples}}
-          <li data-id="{{this.id}}" class="list-group-item">
-            <a href="example/{{this.id}}">{{this.text}}</a>
-            <button class="btn btn-danger float-right delete">ｘ</button>
-          </li>
-          {{/each}}
-        </ul>
+    <div class="card-group"></div>
+      <div class="col-8 offset-2"></div>
+<div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-sm-4">
+      <ul class="list-group">
+    <li class="list-group-item">An item</li>
+    <li class="list-group-item">A second item</li>
+    <li class="list-group-item">A third item</li>
+  </ul>
+  
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
     </div>
   </div>
 </div>
+</div>
+</div>
+</div>
+
+<!--<div id="home">
+  <div class="container">
+    <div class="row">
+      <div class="col-8 offset-2">
+        <h2>Character Card</h2>
+        <form class="clearfix mb-4" action="POST">
+          <div class="form-group">
+            <p><strong>Name:</strong> {{character.name}}</p>
+            <p><strong>Game: </strong> {{character.game}}</p>
+            <p><strong>Description:</strong> {{character.data}}</p>
+           <button type="button" class="btn btn-danger"><a href="/create-edit-character">Edit</a></button>
+          <button type="button" class="btn btn-danger"><a href="/inventory-tracker">Inventory</a></button>
+          </form>
+          <<div class="container">
+            <div "col-4">
+              <div class="card">
+                <div class="card-body">
+                    <ul>
+                      <li> Test </li>
+                    </ul>
+                  </div>
+                </div>>
+            </div>
+          </div>
+         </div>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>-->
+
 
 <script src="/assets/js/example.js"></script>
 
