--- a/views/partials/nav/nav-block.handlebars
+++ b/views/partials/nav/nav-block.handlebars
@@ -22,6 +22,12 @@
         <a class="nav-link" href="/inventory-tracker">Inventory Tracker</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/add-item">Add Item</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/create-edit-items">Create/Edit Items</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/logout">Logout</a>
       </li>
     {{else}}
