--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,8 +1,8 @@
 body {
-  background-image: url(/images/background.jpg);
+  background-image: url("../images/background.jpg");
   color: white;
   background-size: cover;
-  height:100%
+  height:100%;
 }
 
 .jumbotron {
