--- a/views/partials/nav/nav-block.handlebars
+++ b/views/partials/nav/nav-block.handlebars
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
   <!-- Brand/logo -->
   <a class="navbar-brand" href="/">
-    AppName
+    RPG-Manager
   </a>
-  
+
   <!-- Links -->
   <ul class="nav navbar-nav ml-auto">
 
@@ -12,22 +12,22 @@
     </li> --}}
 
     {{#if isloggedin}}
-      <li class="nav-item">
-        <a class="nav-link" href="/example">Example page</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/profile">My Profile</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/logout">Logout</a>
-      </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/example">Example page</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/profile">My Profile</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/logout">Logout</a>
+    </li>
     {{else}}
-      <li class="nav-item">
-        <a class="nav-link" href="#" id="login-modal">Login</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/register" data-register={{register}}>Register</a>
-      </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#" id="login-modal">Login</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/register" data-register={{register}}>Register</a>
+    </li>
     {{/if}}
   </ul>
 </nav>
