--- a/views/character-list.handlebars
+++ b/views/character-list.handlebars
@@ -13,6 +13,7 @@
     <li class="list-group-item">A second item</li>
     <li class="list-group-item">A third item</li>
   </ul>
+   <button type="button" class="btn btn-danger"><a href="/create-edit-character">Edit</a></button>
   
     </div>
     <div class="col-md-8">
@@ -22,6 +23,8 @@
         <p class="card-text">Character Data: </p>
       </div>
     </div>
+    <button type="button" class="btn btn-danger"><a href="/create-edit-character">Edit</a></button>
+    <button type="button" class="btn btn-danger"><a href="/inventory-tracker">Inventory Tracker</a></button>
   </div>
 </div>
 </div>
