--- a/views/partials/nav/nav-block.handlebars
+++ b/views/partials/nav/nav-block.handlebars
@@ -12,24 +12,24 @@
     </li> --}}
 
     {{#if isloggedin}}
-      <li class="nav-item">
-        <a class="nav-link" href="/character-list">Select Characters</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/detail">Create or Edit Character</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/inventory-tracker">Inventory Tracker</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/add-item">Add Item</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/create-edit-items">Create/Edit Items</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/logout">Logout</a>
-      </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/character-list">Select Characters</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/create-edit-character">Create or Edit Character</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/inventory-tracker">Inventory Tracker</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/add-item">Add Item</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/create-edit-items">Create/Edit Items</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/logout">Logout</a>
+    </li>
     {{else}}
     <li class="nav-item">
       <a class="nav-link" href="#" id="login-modal">Login</a>
