--- a/views/character-list.handlebars
+++ b/views/character-list.handlebars
@@ -4,31 +4,47 @@
 <div id="home">
   <div class="container">
     <div class="card-group"></div>
-      <div class="col-8 offset-2"></div>
-<div class="card mb-3" style="max-width: 540px;">
-  <div class="row g-0">
-    <div class="col-sm-4">
-      <ul class="list-group">
-    <li class="list-group-item">An item</li>
-    <li class="list-group-item">A second item</li>
-    <li class="list-group-item">A third item</li>
-  </ul>
-  
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    <div class="col-8 offset-2"></div>
+    <div class="card mb-3">
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="card-header">Character list
+          </div>
+          <ul class="list-group">
+            <li class="list-group-item">Character 1</li>
+            <li class="list-group-item">Character 2</li>
+            <li class="list-group-item">Character 3</li>
+            <li class="list-group-item">Character 4</li>
+            <li class="list-group-item">Character 5</li>
+            <li class="list-group-item">Character 6</li>
+            <li class="list-group-item">Character 7</li>
+            <li class="list-group-item">Character 8</li>
+            <li class="list-group-item">Character 9</li>
+            <li class="list-group-item">Character 10</li>
+            <li class="list-group-item">Character 11</li>
+          </ul>
+          <button type="button" class="btn btn-danger"><a href="/create-edit-character">Create/Edit</a></button>
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <form class="clearfix mb-4" action="POST">
+              <div class="form-group">
+                <p><strong>Name:</strong> {{character.name}}</p>
+                <p><strong>Game: </strong> {{character.game}}</p>
+                <p><strong>Description:</strong> {{character.data}}</p>
+                <button type="button" class="btn btn-danger"><a href="/create-edit-character">Edit</a></button>
+                <button type="button" class="btn btn-danger"><a href="/inventory-tracker">Inventory</a></button>
+            </form>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
 </div>
-</div>
-</div>
 
-<!--<div id="home">
+{{!-- <div id="home">
   <div class="container">
     <div class="row">
       <div class="col-8 offset-2">
@@ -38,26 +54,26 @@
             <p><strong>Name:</strong> {{character.name}}</p>
             <p><strong>Game: </strong> {{character.game}}</p>
             <p><strong>Description:</strong> {{character.data}}</p>
-           <button type="button" class="btn btn-danger"><a href="/create-edit-character">Edit</a></button>
-          <button type="button" class="btn btn-danger"><a href="/inventory-tracker">Inventory</a></button>
-          </form>
-          <<div class="container">
-            <div "col-4">
-              <div class="card">
-                <div class="card-body">
-                    <ul>
-                      <li> Test </li>
-                    </ul>
-                  </div>
-                </div>>
-            </div>
-          </div>
-         </div>
+            <button type="button" class="btn btn-danger"><a href="/create-edit-character">Edit</a></button>
+            <button type="button" class="btn btn-danger"><a href="/inventory-tracker">Inventory</a></button>
+        </form>
+        <<div class="container">
+          <div "col-4">
+            <div class="card">
+              <div class="card-body">
+                <ul>
+                  <li> Test </li>
+                </ul>
+              </div>
+            </div>>
           </div>
       </div>
     </div>
   </div>
-</div>-->
+</div>
+</div>
+</div>
+</div> --}}
 
 
 <script src="/assets/js/example.js"></script>
@@ -65,5 +81,5 @@
 {{> modal/login-block}}
 
 <script>
-  var userId = {{userInfo.id}};
+  var userId = {{ userInfo.id }};
 </script>
