--- a/views/character-list.handlebars
+++ b/views/character-list.handlebars
@@ -3,10 +3,9 @@
 
 <div id="home">
   <div class="container">
-    <div class="col-8 offset-2"></div>
     <div class="card mb-3">
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-md-4">
           <div class="card-header">Character list
           </div>
           <ul class="list-group">
