--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,8 @@
 body {
   background-image: url("../images/background.jpg");
   color: white;
-  background-size: cover;
+  background-color: black;
+  background-repeat: no-repeat;
   height:100%;
 }
 
