--- a/views/partials/nav/nav-block.handlebars
+++ b/views/partials/nav/nav-block.handlebars
@@ -28,7 +28,7 @@
       <a class="nav-link" href="/create-edit-items">Create/Edit Items</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/logout" id="logout">Logout</a>
+      <a class="nav-link" href="#" id="logout-modal">Logout</a>
     </li>
     {{else}}
     <li class="nav-item">
@@ -41,14 +41,5 @@
   </ul>
 </nav>
 
-<script>$(function () {
-    $('a#logout').click(function () {
-      if (confirm('Are you sure you want to logout?')) {
-        return true;
-      }
-
-      return false;
-    });
-  });</script>
-
 {{> modal/login-block}}
+{{> modal/logout-block}}
