--- a/views/add-item.handlebars
+++ b/views/add-item.handlebars
@@ -4,19 +4,21 @@
   <div class="row">
     <div class="col-12">Add Item</div>
     <div class="col-4"> Exisiting Item Inventory
-        <ul>
-            <li>Item:   </li>
-        </ul>
-    <div>
-         <button id="login" type="button" class="btn btn-primary"> Create Item</button>
-    </div>
+      <ul id="item-list">
+        <li>Item: </li>
+      </ul>
+      <div>
+        <button id="login" type="button" class="btn btn-primary"> Create Item</button>
+      </div>
     </div>
     <div class="col-6">Item Details
-       <h5 class="card-title">Item Name: </h5>
-        <p class="card-text">Item Description: </p>
-  </div>
-  <div>
-       <button id="login" type="button" class="btn btn-primary">Edit </button>
+      <h5 class="card-title">Item Name: <span id="item-name"></span></h5>
+      <p class="card-text">Item Description: <span id="item-desc"></span></p>
+    </div>
+    <div>
+      <button id="login" type="button" class="btn btn-primary">Edit </button>
+    </div>
+
   </div>
 
-</div>
+  <script src="/assets/js/item.js"></script>
