--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,8 +1,6 @@
 <div class="container">
   <div class="jumbotron mt-4">
-    <h1 class="display-4 text-center">404 Not Found
-      <span role="img" aria-label="Face with rolling eyes">🙄</span>
-    </h1>
-    <a href="/">← Back To Home</a>
+    <h1 class="display-4 text-center">Are you lost, adventurer?</h1>
+    <a class="btn btn-danger col-12" role="button" href="/">⌂ Retreat Home ⌂</a>
   </div>
 </div>
