--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7,6 +7,12 @@ body {
   height:100%;
 }
 
+#inventoryIcon {
+  background: transparent;
+  height: 100px;
+  width: 100px;
+}
+
 .jumbotron {
   background: rgba(0,0,0,0);
 }
@@ -42,12 +48,11 @@ body {
   color: white;
 }
 .container {
-  padding-bottom: 2%;
+  padding: 2%;
   margin-top: 10%;
   background: rgba(86, 101, 115,.6);
   height:100%;
   border-radius: .25rem;
-  margin-bottom: 2%;
 }
 
 [data-useremail="true"] {
