changed character list buttons

--- a/views/character-list.handlebars
+++ b/views/character-list.handlebars
@@ -21,7 +21,7 @@
             <li class="list-group-item">Character 10</li>
             <li class="list-group-item">Character 11</li>
           </ul>
-          <button type="button" class="btn btn-danger col-12"><a href="/create-edit-character">Create/Edit</a></button>
+          <button type="button" class="btn btn-danger col-12"><a href="/create-edit-character">Create +</a></button>
         </div>
         <div class="col-md-8">
           <div class="card-body">
@@ -32,6 +32,8 @@
                 <p><strong>Description: </strong><span id="character-desc"></p>
                 <a href="/inventory-tracker">
                   <img id="inventoryIcon" alt="Inventory" src="assets/images/inventorytransparent.png">
+                  <button type="button" class="btn btn-danger"><a href="/create-edit-character">Edit
+                      Character</a></button>
                 </a>
             </form>
           </div>
