Added character data load to character editor

--- a/views/create-edit-character.handlebars
+++ b/views/create-edit-character.handlebars
@@ -9,15 +9,15 @@
         <br>
         <div class="mb-3">
           <label for="Character Name" class="form-label">Character Name</label>
-          <input type="Name" class="form-control" id="exampleFormControlInput1">
+          <input type="Name" class="form-control" id="char-name-input">
         </div>
         <div class="mb-3">
           <label for="Game Name" class="form-label">Game</label>
-          <input type="Name" class="form-control" id="exampleFormControlInput1">
+          <input type="Name" class="form-control" id="char-game-input">
         </div>
         <div class="mb-3">
           <label for="Data" class="form-label">Data</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="20"></textarea>
+          <textarea class="form-control" id="char-data-input" rows="20"></textarea>
         </div>
       </div>
 
@@ -30,7 +30,4 @@
   </div>
   </div>
 
-
-  <script>
-    var userId = {{ userInfo.id }};
-  </script>
+  <script src="/assets/js/charEditor.js"></script>
