--- a/views/create-edit-character.handlebars
+++ b/views/create-edit-character.handlebars
@@ -4,8 +4,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-10">
-        <div class="header">Create/Edit Character
-        </div>
+        <div id="title" class="header"></div>
         <br>
         <div class="mb-3">
           <label for="Character Name" class="form-label">Character Name</label>
