--- a/views/character-list.handlebars
+++ b/views/character-list.handlebars
@@ -3,42 +3,39 @@
 
 <div id="home">
   <div class="container">
-    <div class="card">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="card-header text-center">Character list
-          </div>
-          <ul id="character-list" class="list-group">
-            <li class="list-group-item">Character 1</li>
-            <li class="list-group-item">Character 2</li>
-            <li class="list-group-item">Character 3</li>
-            <li class="list-group-item">Character 4</li>
-            <li class="list-group-item">Character 5</li>
-            <li class="list-group-item">Character 6</li>
-            <li class="list-group-item">Character 7</li>
-            <li class="list-group-item">Character 8</li>
-            <li class="list-group-item">Character 9</li>
-            <li class="list-group-item">Character 10</li>
-            <li class="list-group-item">Character 11</li>
-          </ul>
-          <button type="button" class="btn btn-danger col-12"><a href="/create-edit-character">Create +</a></button>
-        </div>
-        <div class="col-md-8">
-          <div class="card-body">
-            <form class="clearfix mb-4" action="POST">
-              <div class="form-group">
-                <p><strong>Name: </strong><span id="character-name"></p>
-                <p><strong>Game: </strong><span id="character-game"></p>
-                <p><strong>Description: </strong><span id="character-desc"></p>
-                <a href="/inventory-tracker">
-                  <img id="inventoryIcon" alt="Inventory" src="assets/images/inventorytransparent.png">
-                  <button type="button" class="btn btn-danger"><a href="/create-edit-character">Edit
-                      Character</a></button>
-                </a>
-            </form>
-          </div>
-        </div>
+    <div class="header text-center">Character list</div>
+    <div class="row">
+      <div class="col-md-4">
 
+        <ul id="character-list" class="list-group">
+          <li class="list-group-item">Character 1</li>
+          <li class="list-group-item">Character 2</li>
+          <li class="list-group-item">Character 3</li>
+          <li class="list-group-item">Character 4</li>
+          <li class="list-group-item">Character 5</li>
+          <li class="list-group-item">Character 6</li>
+          <li class="list-group-item">Character 7</li>
+          <li class="list-group-item">Character 8</li>
+          <li class="list-group-item">Character 9</li>
+          <li class="list-group-item">Character 10</li>
+          <li class="list-group-item">Character 11</li>
+        </ul>
+        <button type="button" class="btn btn-danger col-12"><a href="/create-edit-character">Create +</a></button>
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <form class="clearfix mb-4" action="POST">
+            <div class="form-group">
+              <p><strong>Name: </strong><span id="character-name"></p>
+              <p><strong>Game: </strong><span id="character-game"></p>
+              <p><strong>Description: </strong><span id="character-desc"></p>
+              <a href="/inventory-tracker">
+                <img id="inventoryIcon" alt="Inventory" src="assets/images/inventorytransparent.png">
+                <button type="button" class="btn btn-danger"><a href="/create-edit-character">Edit
+                    Character</a></button>
+              </a>
+          </form>
+        </div>
       </div>
     </div>
   </div>
