--- a/views/create-edit-items.handlebars
+++ b/views/create-edit-items.handlebars
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-10">
-        <div class="header">Create/Edit Item
+        <div class="header text-center">Create/Edit Item
         </div>
         <br>
         <div class="mb-3">
