Cleaned up backpack icon and added edit quill

--- a/views/add-item.handlebars
+++ b/views/add-item.handlebars
@@ -16,7 +16,9 @@
       <p class="card-text">Item Description: <span id="item-desc"></span></p>
     </div>
     <div>
-      <button id="login" type="button" class="btn btn-primary">Edit </button>
+      <a href="/create-edit-items">
+        <img id="editIcon" alt="Edit Item" src="assets/images/editquill.png">
+      </a>
     </div>
 
   </div>
