--- a/views/character-list.handlebars
+++ b/views/character-list.handlebars
@@ -32,8 +32,9 @@
                 <p><strong>Description: </strong><span id="character-desc"></p>
                 <a href="/inventory-tracker">
                   <img id="inventoryIcon" alt="Inventory" src="assets/images/inventorytransparent.png">
-                  <button type="button" class="btn btn-danger"><a href="/create-edit-character">Edit
-                      Character</a></button>
+                </a>
+                <a href="/create-edit-character">
+                  <img id="editIcon" alt="Edit Character" src="assets/images/editquill.png">
                 </a>
             </form>
           </div>
