--- a/views/add-item.handlebars
+++ b/views/add-item.handlebars
@@ -3,15 +3,15 @@
 <div class="container">
   <div class="row">
     <div class="col-12">Add Item</div>
-    <div class="col-4"> Exisiting Item Inventory
+    <div class="col-4">
       <ul id="item-list">
         <li>Item: </li>
       </ul>
       <div>
-        <button id="login" type="button" class="btn btn-primary"> Create Item</button>
+        <a id="create-item" type="button" class="btn btn-danger col-12" href="/create-edit-items">Create +</a>
       </div>
     </div>
-    <div class="col-6">Item Details
+    <div class="col-6">
       <h5 class="card-title">Item Name: <span id="item-name"></span></h5>
       <p class="card-text">Item Description: <span id="item-desc"></span></p>
     </div>
