Implemented character add/edit flow with URI encoding

--- a/views/create-edit-character.handlebars
+++ b/views/create-edit-character.handlebars
@@ -22,9 +22,9 @@
       </div>
 
       <div class="col-md-2">
-        <button type="button" class="btn btn-danger">Save Character</button>
+        <button id="save-char" type="button" class="btn btn-danger">Save Character</button>
         <br>
-        <button type="button" class="btn btn-danger">Discard</button>
+        <a type="button" class="btn btn-danger" href="/">Discard</a>
       </div>
     </div>
   </div>
