Added URI decode and prewrap to character and inventory pages

--- a/views/add-item.handlebars
+++ b/views/add-item.handlebars
@@ -12,8 +12,8 @@
       </div>
     </div>
     <div class="col-6">
-      <h5 class="card-title">Item Name: <span id="item-name"></span></h5>
-      <p class="card-text">Item Description: <span id="item-desc"></span></p>
+      <h5 class="card-title"><span id="item-name"></span></h5>
+      <p class="card-text"><span id="item-desc" class="prewrap"></span></p>
     </div>
     <div>
       <a href="/create-edit-items">
