--- a/views/inventory-tracker.handlebars
+++ b/views/inventory-tracker.handlebars
@@ -12,8 +12,8 @@
       </div>
     </div>
     <div class="col-6">Item Details
-      <h5 class="card-title">Item Name: <span id="item-name"></span></h5>
-      <p class="card-text">Item Description: <span id="item-desc"></span></p>
+      <h5 class="card-title"><span id="item-name"></span></h5>
+      <p class="card-text"><span id="item-desc" class="prewrap"></span></p>
       Quantity:
       <input id="item-quantity" type="number" class="btn btn-primary" min=0 max=99>
       <button id="inc-quantity" class=" btn btn-primary">Inc</button>
