--- a/views/add-item.handlebars
+++ b/views/add-item.handlebars
@@ -16,7 +16,7 @@
       <p class="card-text"><span id="item-desc" class="prewrap"></span></p>
     </div>
     <div>
-      <a href="/create-edit-items">
+      <a href="/create-edit-character" data-toggle="tooltip" data-placement="bottom" title="Edit Item">
         <img id="editIcon" alt="Edit Item" src="assets/images/editquill.png">
       </a>
     </div>
