--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -95,3 +95,8 @@ hr {
 .bs-tooltip-bottom {
   top: 30px !important;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button{
+  -webkit-appearance: none;
+}
