Add Item: Hide right-hand column when no item selected

--- a/views/inventory-tracker.handlebars
+++ b/views/inventory-tracker.handlebars
@@ -11,7 +11,7 @@
         <button id="add-item" type="button" class="btn btn-primary">+ Item</button>
       </div>
     </div>
-    <div class="col-6">Item Details
+    <div class="col-6" id="itemDetails">Item Details
       <h5 class="card-title"><span id="item-name"></span></h5>
       <p class="card-text"><span id="item-desc" class="prewrap"></span></p>
       Quantity:
