--- a/views/add-item.handlebars
+++ b/views/add-item.handlebars
@@ -11,7 +11,7 @@
         <a id="create-item" type="button" class="btn btn-danger col-12" href="/create-edit-items">Create +</a>
       </div>
     </div>
-    <div class="col-6">
+    <div class="col-6" id="itemDetails">
       <h5 class="card-title"><span id="item-name"></span></h5>
       <p class="card-text"><span id="item-desc" class="prewrap"></span></p>
     </div>
