--- a/views/add-item.handlebars
+++ b/views/add-item.handlebars
@@ -11,12 +11,12 @@
         <a id="create-item" type="button" class="btn btn-danger col-12" href="/create-edit-items">Create +</a>
       </div>
     </div>
-    <div class="col-6" id="itemDetails">
+    <div class="col-6">
       <h5 class="card-title"><span id="item-name"></span></h5>
       <p class="card-text"><span id="item-desc" class="prewrap"></span></p>
     </div>
     <div>
-      <a href="/create-edit-items"> data-toggle="tooltip" data-placement="bottom" title="Edit Item">
+      <a href="/create-edit-items" data-toggle="tooltip" data-placement="bottom" title="Edit Item">
         <img id="editIcon" alt="Edit Item" src="assets/images/editquill.png">
       </a>
     </div>
