button and font styling

--- a/views/inventory-tracker.handlebars
+++ b/views/inventory-tracker.handlebars
@@ -2,7 +2,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-12">Inventory Tracker</div>
+    <div class="col-12 header">Inventory Tracker</div>
     <div class="col-4"> Item Inventory
       <ul id="inventory-list">
         <li>Item: Quantity: </li>
