background styling for char list and header styling for inv tracker

--- a/views/inventory-tracker.handlebars
+++ b/views/inventory-tracker.handlebars
@@ -2,8 +2,9 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-12 header">Inventory Tracker</div>
-    <div class="col-4"> Item Inventory
+    <div class="col-4">
+      <div class="card-header text-center">Inventory Tracker
+      </div>
       <ul id="inventory-list">
         <li>Item: Quantity: </li>
       </ul>
