--- a/views/inventory-tracker.handlebars
+++ b/views/inventory-tracker.handlebars
@@ -2,8 +2,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-9"></div>
-    <input type="button" class="btn btn-primary col-md" onclick="location.href='/';" value="← Character list" />
+
     <div class="col-4">
       <div class="card-header text-center">Inventory Tracker
       </div>
@@ -23,7 +22,9 @@
       <button id="dec-quantity" class="btn btn-primary">Dec</button>
       <button id="save-quantity" class="btn btn-primary">Save</button>
     </div>
-
+    <div class="col-md-2">
+      <input type="button" class="btn btn-primary" onclick="location.href='/';" value="← Character list" />
+    </div>
   </div>
 
   <script src="assets/js/inventory.js"></script>
