Added Add Item button and functionality to Add Item page

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -114,7 +114,7 @@ nav {
 }
 
 .hidden {
-  display: hidden;
+  visibility: hidden;
 }
 
 .bs-tooltip-bottom {
@@ -149,5 +149,9 @@ nav {
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button{
   -webkit-appearance: none;
+}
+
+.pointer {
+  cursor: pointer;
 }
 
