--- a/views/add-item.handlebars
+++ b/views/add-item.handlebars
@@ -5,22 +5,23 @@
     <div class="col-12">Add Item</div>
     <div class="col-4">
       <ul id="item-list">
-        <li>Item: </li>
       </ul>
       <div>
         <a id="create-item" type="button" class="btn btn-danger col-12" href="/create-edit-items">Create +</a>
       </div>
     </div>
-    <div class="col-6">
+    <div class="col-6 item-block hidden">
       <h5 class="card-title"><span id="item-name"></span></h5>
       <p class="card-text"><span id="item-desc" class="prewrap"></span></p>
     </div>
-    <div>
-      <a href="/create-edit-items" data-toggle="tooltip" data-placement="bottom" title="Edit Item">
-        <img id="editIcon" alt="Edit Item" src="assets/images/editquill.png">
+    <div class="col-2 item-block hidden">
+      <img class="pointer" data-toggle="tooltip" data-placement="right" title="Add Item" id="add-icon" alt="Add Item"
+        src="assets/images/additem.png">
+      <br>
+      <a href="/create-edit-items" data-toggle="tooltip" data-placement="right" title="Edit Item">
+        <img id="edit-icon" alt="Edit Item" src="assets/images/editquill.png">
       </a>
     </div>
-
   </div>
 
   <script src="/assets/js/item.js"></script>
