text area styling. changed logout message

--- a/views/create-edit-items.handlebars
+++ b/views/create-edit-items.handlebars
@@ -9,7 +9,7 @@
           <br>
           <div class="mb-3">
             <label for="item-name-input" class="form-label">Item Name</label>
-            <input type="Name" class="form-control" id="item-name-input" name="name">
+            <input type="Name" class="form-control" id="item-name-input" autocomplete="off" name="name">
           </div>
           <div class="mb-3">
             <label for="item-desc-input" class="form-label">Description</label>
@@ -17,9 +17,10 @@
           </div>
         </div>
 
-        <div class="col-md-2">
-          <button id="save-item" type="submit" class="btn btn-danger">Save Item</button>
-          <br>
+        <div class="col-md">
+          <button id="save-item" type="submit" class="btn btn-danger">Save Character</button>
+        </div>
+        <div class="col-md-9">
           <a type="button" class="btn btn-danger" href="/add-item">Discard</a>
         </div>
       </div>
