--- a/views/partials/modal/logout-block.handlebars
+++ b/views/partials/modal/logout-block.handlebars
@@ -9,7 +9,7 @@
       </div>
 
       <div class="modal-body">
-        Are you sure you want to log out?
+        Are you sure you want to end your adventure?
       </div>
 
       <div class="modal-footer">
