--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -97,6 +97,21 @@ hr {
   font-weight: 900;
 }
 
+.form-control {
+  background-color: #444 !important;
+  color:white !important; 
+}
+
+.form-control:focus {
+  outline: none;
+  box-shadow:none !important;
+  border:1px solid white;
+}
+
+textarea {
+  color:white !important; 
+}
+
 nav {
   font-family: 'MedievalSharp', cursive;
   color: rgb(197, 175, 47);
