--- a/views/inventory-tracker.handlebars
+++ b/views/inventory-tracker.handlebars
@@ -9,8 +9,8 @@
       <ul id="inventory-list">
         <li>Item: Quantity: </li>
       </ul>
-      <div>
-        <button id="add-item" type="button" class="btn btn-primary">+ Item</button>
+      <div class="col-md">
+        <button id="add-item" type="button" class="btn btn-primary col-md">+ Item</button>
       </div>
     </div>
     <div class="col-6" id="itemDetails">Item Details
@@ -22,7 +22,7 @@
       <button id="dec-quantity" class="btn btn-primary">Dec</button>
       <button id="save-quantity" class="btn btn-primary">Save</button>
     </div>
-    <div class="col-md-2">
+    <div class="col-md">
       <input type="button" class="btn btn-primary" onclick="location.href='/';" value="← Character list" />
     </div>
   </div>
