changed save/discard buttons for character/item.

--- a/views/create-edit-character.handlebars
+++ b/views/create-edit-character.handlebars
@@ -22,12 +22,9 @@
         </div>
 
         <div class="col-md">
-          <button id="save-char" type="submit" class="btn btn-danger">Save Character</button>
+          <button id="save-char" type="submit" class="btn btn-danger btn-block">Save Character</button>
+          <a type="button" class="btn btn-danger btn-block" href="/">Discard</a>
         </div>
-        <div class="col-md-9">
-          <a type="button" class="btn btn-danger" href="/">Discard</a>
-        </div>
-
       </div>
     </form>
   </div>
