--- a/views/create-edit-items.handlebars
+++ b/views/create-edit-items.handlebars
@@ -18,10 +18,8 @@
         </div>
 
         <div class="col-md">
-          <button id="save-item" type="submit" class="btn btn-danger">Save Character</button>
-        </div>
-        <div class="col-md-9">
-          <a type="button" class="btn btn-danger" href="/add-item">Discard</a>
+          <button id="save-item" type="submit" class="btn btn-danger btn-block">Save Character</button>
+          <a type="button" class="btn btn-danger btn-block" href="/add-item">Discard</a>
         </div>
       </div>
     </form>
