Implemented Edit button appearance toggle based on user id

--- a/views/add-item.handlebars
+++ b/views/add-item.handlebars
@@ -24,4 +24,8 @@
     </div>
   </div>
 
+  <script>
+    sessionStorage.setItem('EditorId', {{ userInfo.id }});
+  </script>
+
   <script src="/assets/js/item.js"></script>
