adjusted padding in inv tracker

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -132,6 +132,10 @@ nav {
   visibility: hidden;
 }
 
+#inventory-list {
+  padding-left: 0px;
+}
+
 .bs-tooltip-bottom {
   top: 30px !important;
 }
