--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -88,6 +88,13 @@ hr {
 
 }
 
+.selected-char-btn,
+.selected-item-btn,
+.selected-inv-btn {
+  background-color: rgba(197, 175, 47, 0.295);
+  color: #111;
+}
+
 .card-body {
   color: #444;
 }
