Clear session storage as needed

--- a/views/create-edit-items.handlebars
+++ b/views/create-edit-items.handlebars
@@ -18,7 +18,7 @@
         </div>
 
         <div class="col-md">
-          <button id="save-item" type="submit" class="btn btn-danger btn-block">Save Character</button>
+          <button id="save-item" type="submit" class="btn btn-danger btn-block">Save Item</button>
           <a type="button" class="btn btn-danger btn-block" href="/add-item">Discard</a>
         </div>
       </div>
