--- a/views/partials/nav/nav-block.handlebars
+++ b/views/partials/nav/nav-block.handlebars
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm bg-dark fixed-top">
   <!-- Brand/logo -->
-  <a class="navbar-brand" href="/">
+  <a id="brand-link" class="navbar-brand" href="/">
     RPG Manager
   </a>
 
