Added return button and blocked add for existing items

--- a/views/add-item.handlebars
+++ b/views/add-item.handlebars
@@ -14,13 +14,18 @@
       <h5 class="card-title"><span id="item-name"></span></h5>
       <p class="card-text"><span id="item-desc" class="prewrap"></span></p>
     </div>
-    <div class="col-2 item-block hidden">
-      <img class="pointer" data-toggle="tooltip" data-placement="right" title="Add Item" id="add-icon" alt="Add Item"
-        src="assets/images/additem.png">
-      <br>
-      <a href="/create-edit-items" data-toggle="tooltip" data-placement="right" title="Edit Item">
-        <img id="edit-icon" alt="Edit Item" src="assets/images/editquill.png">
-      </a>
+    <div class="col-2">
+      <img class="mb-2 pointer" data-toggle="tooltip" data-placement="right" title="Return to Inventory"
+        id="return-icon" alt="Return to Inventory" src="assets/images/return.png">
+      <div class="item-block hidden">
+        <img class="mb-2 pointer" data-toggle="tooltip" data-placement="right" title="Add Item" id="add-icon"
+          alt="Add Item" src="assets/images/additem.png">
+        <br>
+        <a href="/create-edit-items" data-toggle="tooltip" data-placement="right" title="Edit Item">
+          <img id="edit-icon" alt="Edit Item" src="assets/images/editquill.png">
+        </a>
+      </div>
+
     </div>
   </div>
 
