Fixes detail flicker when loading character list and inventory

--- a/views/character-list.handlebars
+++ b/views/character-list.handlebars
@@ -12,7 +12,7 @@
         <a id="create-character" type="button" class="btn btn-danger col-12" href="/create-edit-character">Create
           +</a>
       </div>
-      <div class="col-md-8" id="charDetails">
+      <div class="col-md-8 hidden" id="charDetails">
         <div class="card-body">
           <div class="clearfix mb-4">
             <div>
