--- a/views/inventory-tracker.handlebars
+++ b/views/inventory-tracker.handlebars
@@ -14,7 +14,7 @@
         <button id="remove-item" type="button" class="btn btn-danger col-5">Remove Item</button>
       </div>
     </div>
-    <div class="col-6" id="itemDetails">Item Details
+    <div class="col-6 hidden" id="itemDetails">
       <h5 class="card-title"><span id="item-name"></span></h5>
       <p class="card-text"><span id="item-desc" class="prewrap"></span></p>
       Quantity:
