Replaced character return button with icon

--- a/views/inventory-tracker.handlebars
+++ b/views/inventory-tracker.handlebars
@@ -24,7 +24,10 @@
       <button id="save-quantity" class="btn btn-primary">Save</button>
     </div>
     <div class="col-md">
-      <input type="button" class="btn btn-primary" onclick="location.href='/';" value="← Character list" />
+      <a href="/">
+        <img class="pointer" data-toggle="tooltip" data-placement="right" title="Return to Characters" id="return-icon"
+          alt="Return to Characters" src="assets/images/return.png">
+      </a>
     </div>
   </div>
 
