Styled quantity inc/dec buttons

--- a/views/inventory-tracker.handlebars
+++ b/views/inventory-tracker.handlebars
@@ -19,9 +19,9 @@
       <p class="card-text"><span id="item-desc" class="prewrap"></span></p>
       Quantity:
       <input id="item-quantity" type="number" class="btn btn-primary" min=0 max=99>
-      <button id="inc-quantity" class=" btn btn-primary">Inc</button>
-      <button id="dec-quantity" class="btn btn-primary">Dec</button>
-      <button id="save-quantity" class="btn btn-primary">Save</button>
+      <button id="inc-quantity" class="btn btn-primary quant-btn">+</button>
+      <button id="dec-quantity" class="btn btn-primary quant-btn">−</button>
+      <button id="save-quantity" class="ml-3 btn btn-primary">Save</button>
     </div>
     <div class="col-md">
       <a href="/">
