--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -177,6 +177,13 @@ nav {
 	top:1px;
 }
 
+.quant-btn {
+  width: 3rem;
+  border-radius: 8px;
+  font-size: 1.2rem;
+  padding: 8px;
+}
+
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button{
   -webkit-appearance: none;
