made the css styling a bit more consistent across pages

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7,6 +7,10 @@ body {
   background-attachment: fixed;
 }
 
+#item-list {
+  padding: 0%;
+}
+
 #inventoryIcon {
   background: transparent;
   height: 100px;
