--- a/views/character-list.handlebars
+++ b/views/character-list.handlebars
@@ -9,7 +9,8 @@
         </div>
         <ul id="character-list" class="list-group">
         </ul>
-        <a id="create-character" type="button" class="btn btn-danger col-12" href="/create-edit-character">Create
+        <a id="create-character" type="button" class="btn btn-danger col-12" style="margin-top: 5px;"
+          href="/create-edit-character">Create
           +</a>
       </div>
       <div class="col-md-8 hidden" id="charDetails">
