--- a/views/inventory-tracker.handlebars
+++ b/views/inventory-tracker.handlebars
@@ -10,19 +10,19 @@
         <li>Item: Quantity: </li>
       </ul>
       <div>
-        <a id="add-item" type="button" class="btn btn-danger col-5" href="/add-item">Add Item</a>
-        <button id="remove-item" type="button" class="btn btn-danger col-5">Remove Item</button>
+        <a id="add-item" type="button" class="btn btn-danger col-md btn-block" href="/add-item">Add Item</a>
+        <button id="remove-item" type="button" class="btn btn-danger col-md btn-block">Remove Item</button>
       </div>
     </div>
-    <div class="col-6 hidden" id="itemDetails">
+    <div class="col-md-6 hidden" id="itemDetails">
       <h5 class="card-title"><span id="item-name"></span></h5>
       <p class="card-text"><span id="item-desc" class="prewrap"></span></p>
       <form id="quantity-form">
         Quantity:
-        <input id="item-quantity" type="number" class="btn btn-primary" min="0" max="99">
-        <button id="inc-quantity" type="button" class="btn btn-primary">Inc</button>
-        <button id="dec-quantity" type="button" class="btn btn-primary">Dec</button>
-        <button id="save-quantity" type="submit" class="btn btn-primary">Save</button>
+        <input id="item-quantity" type="number" class="btn btn-danger" min="0" max="99">
+        <button id="inc-quantity" type="button" class="btn btn-danger">+</button>
+        <button id="dec-quantity" type="button" class="btn btn-danger">-</button>
+        <button id="save-quantity" type="submit" class="btn btn-danger btn-block" style="margin-top: 5px;">Save</button>
       </form>
     </div>
     <div class="col-md">
