--- a/views/add-item.handlebars
+++ b/views/add-item.handlebars
@@ -2,8 +2,8 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-12">Add Item</div>
     <div class="col-4">
+      <div class="card-header text-center">Add Item</div>
       <ul id="item-list">
       </ul>
       <div>
