--- a/views/inventory-tracker.handlebars
+++ b/views/inventory-tracker.handlebars
@@ -1,8 +1,7 @@
 {{> nav/nav-block}}
-
+<script src="assets/js/datacheck.js"></script>
 <div class="container">
   <div class="row">
-
     <div class="col-md-4">
       <div class="card-header text-center">Inventory Tracker
       </div>
