--- a/views/partials/nav/nav-block.handlebars
+++ b/views/partials/nav/nav-block.handlebars
@@ -20,7 +20,7 @@
       <a class="nav-link" href="#" id="login-modal">Login</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/register" data-register={{register}}>Register</a>
+      <a class="nav-link" href="/register" id="register-modal" data-register={{register}}>Register</a>
     </li>
     {{/if}}
   </ul>
