Organized CSS file

--- a/views/partials/modal/login-block.handlebars
+++ b/views/partials/modal/login-block.handlebars
@@ -12,11 +12,11 @@
         <form>
           <div class="form-group">
             <label for="inputAccount">Email</label>
-            <input type="text" class="form-control" id="email">
+            <input type="text" class="form-control" id="email" placeholder="Email">
           </div>
           <div class="form-group">
             <label for="inputAccount">Password</label>
-            <input type="password" class="form-control" id="user_password">
+            <input type="password" class="form-control" id="user_password" placeholder="Password">
           </div>
         </form>
       </div>
