--- a/views/character-list.handlebars
+++ b/views/character-list.handlebars
@@ -12,7 +12,7 @@
         <a id="create-character" type="button" class="btn btn-danger col-12" style="margin-top: 5px;"
           href="/create-edit-character">Create
           +</a>
-        <button id="remove-item" type="button" class="btn btn-danger col-md btn-block">Remove Item</button>
+        <button id="remove-char" type="button" class="btn btn-danger col-md btn-block">Remove Character</button>
       </div>
       <div class="col-md-8 hidden" id="charDetails">
         <div class="card-body">
