Changed tooltip for add button

--- a/views/add-item.handlebars
+++ b/views/add-item.handlebars
@@ -18,8 +18,8 @@
       <img class="mb-2 pointer" data-toggle="tooltip" data-placement="right" title="Return to Inventory"
         id="return-icon" alt="Return to Inventory" src="assets/images/return.png">
       <div class="item-block hidden">
-        <img class="mb-2 pointer" data-toggle="tooltip" data-placement="right" title="Add Item" id="add-icon"
-          alt="Add Item" src="assets/images/additem.png">
+        <img class="mb-2 pointer" data-toggle="tooltip" data-placement="right" title="Add to Inventory" id="add-icon"
+          alt="Add to Inventory" src="assets/images/additem.png">
         <br>
         <a href="/create-edit-items" data-toggle="tooltip" data-placement="right" title="Edit Item">
           <img id="edit-icon" alt="Edit Item" src="assets/images/editquill.png">
