Hide remove button when nothing is selected

--- a/views/inventory-tracker.handlebars
+++ b/views/inventory-tracker.handlebars
@@ -10,7 +10,7 @@
       </ul>
       <div>
         <a id="add-item" type="button" class="btn btn-danger col-md btn-block" href="/add-item">Add Item</a>
-        <button id="remove-item" type="button" class="btn btn-danger col-md btn-block">Remove Item</button>
+        <button id="remove-item" type="button" class="btn btn-danger col-md btn-block hidden">Remove Item</button>
       </div>
     </div>
     <div class="col-md-6 hidden" id="itemDetails">
