--- a/views/character-list.handlebars
+++ b/views/character-list.handlebars
@@ -12,7 +12,8 @@
         <a id="create-character" type="button" class="btn btn-danger col-12" href="/create-edit-character"
           style="margin-top: 8px;">Create
           +</a>
-        <button id="remove-char" type="button" class="btn btn-danger col-md btn-block" style="margin-top: 8px;">Remove
+        <button id="remove-char" type="button" class="btn btn-danger col-md btn-block hidden"
+          style="margin-top: 8px;">Remove
           Character</button>
       </div>
       <div class="col-md-8 hidden" id="charDetails">
